--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>SAMI:HOME</title>
-	<link rel="shortcut icon" type="image/x-icon" href="next.png">
+	<link rel="shortcut icon" type="image/x-icon" href="img/next.png">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
